--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,88 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.container {
+  border: 1px solid black;
+  width: 35%;
+  border-radius: 20px;
+  margin: 2rem auto;
+  height: 90vh;
+  background-image: url("/src/images/benjamin-behre-3xUiO2-3BT4-unsplash.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  border-radius: 20px;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container::before {
+  content: "";
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.322);
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  border-radius: 20px;
+}
+.input {
+  width: 80%;
+  margin: 2rem auto;
+  position: relative;
+  /* z-index: 100; */
+}
+.input input {
+  width: 90%;
+  padding: 15px;
+  border-radius: 10px;
+  /* z-index: 100; */
+}
+.country {
+  text-align: center;
+  line-height: 0px;
+  margin: 3rem auto;
+  font-size: 2rem;
+  color: #fff;
+  text-shadow: 2px 2px 2px #ce5937;
+  z-index: 1;
+}
+.temp-press-hum {
+  width: 50%;
+  text-align: center;
+  margin: 1rem auto 0rem auto;
+  border: 1px solid #111;
+  padding: 0.6rem;
+  border-radius: 20px;
+  background-color: rgba(238, 238, 238, 0.288);
+  -webkit-box-shadow: inset 3px 4px 55px 13px rgb(156, 158, 175);
+  -moz-box-shadow: inset 3px 4px 55px 13px rgba(156, 158, 175, 0.5);
+  box-shadow: inset 3px 4px 55px 13px rgba(156, 158, 175, 0.473);
+  color: white;
+  line-height: 25px;
+  font-size: 10px;
+}
+span {
+  font-size: 2.5rem;
+  text-shadow: 5px 3px 7px rgba(66, 68, 90, 1);
+}
+.weather {
+  text-align: center;
+  font-size: 3rem;
+  color: #fff;
+  text-shadow: 2px 2px 2px #ce5937;
+  margin-top: -2rem;
+}
+@media only screen and (max-width: 600px) {
+  .container {
+    width: 80%;
+  }
+  .country {
+    word-wrap: break-word;
+    word-break: break-all;
+  }
 }
