--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -13,6 +17,7 @@ body {
     rgba(30, 86, 98, 1) 100%
   );
 }
+/*
 .container {
   border: 1px solid black;
   width: 35%;
@@ -41,23 +46,16 @@ body {
   width: 80%;
   margin: 2rem auto;
   position: relative;
-  /* z-index: 100; */
+ 
 }
 .input input {
   width: 90%;
   padding: 15px;
   border-radius: 10px;
-  /* z-index: 100; */
+
 }
-.country {
-  text-align: center;
-  line-height: 0px;
-  margin: 3rem auto;
-  font-size: 2rem;
-  color: #fff;
-  text-shadow: 2px 2px 2px #ce5937;
-  z-index: 1;
-}
+
+
 .temp-press-hum {
   width: 50%;
   text-align: center;
@@ -92,4 +90,4 @@ span {
     word-wrap: break-word;
     word-break: break-all;
   }
-}
+} */
